--- a/openvidu_db-backend/src/main/resources/application.properties
+++ b/openvidu_db-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://10.200.208.97:3306/openvidu?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/OpenviduUser?useSSL=false
 server.port : 5000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=SE
-spring.datasource.password=SE@123Mysql
+spring.datasource.username=root
+spring.datasource.password=P@$$W0rd@123
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
