create get done

--- a/openvidu_db-backend/src/main/resources/application.properties
+++ b/openvidu_db-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=P@$$W0rd@123
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 user: admin
