--- a/openvidu_db-backend/src/main/resources/application.properties
+++ b/openvidu_db-backend/src/main/resources/application.properties
@@ -16,5 +16,8 @@ sms.url=http://10.89.4.90:18551/fe/api/v1/send?username=vijayk.trans&password=rx
 sms.text=Hi, You have a video call invite, to join click {0} Devicebook
 tiny.url=http://demos.progate.mobi/customers/#/
 
+WA_URL:https://api.pinbot.ai/v1/wamessage/sendMessage
+WA_API_KEY:d29a6fd8-a219-11ed-a7c7-9606c7e32d76
+
 gcp.firebase.service-account=classpath:google-services.json
 firebase.collection=userdata
