--- a/openvidu_db-backend/src/main/resources/application.properties
+++ b/openvidu_db-backend/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/OpenviduUser?useSSL=false
+
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/videoplatform
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 server.port : 5000
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=P@$$W0rd@123
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 user: admin
 password: admin
+
+
 secret.key="secret"
 access.time=24
 
