--- a/openvidu_db-backend/src/main/resources/application.properties
+++ b/openvidu_db-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/videoplatform
+spring.datasource.url=jdbc:postgresql://172.17.0.122:5432/videoplatform
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port : 5000
